--- a/src/Buseta/TallerBundle/Resources/views/Impuesto/new.html.twig
+++ b/src/Buseta/TallerBundle/Resources/views/Impuesto/new.html.twig
@@ -13,7 +13,7 @@
 
 {% block area_trabajo %}
 
-    <form action="{{ path('impuesto_create') }}" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('impuesto_create') }}" method="post" enctype="multipart/form-data">
 
         {{ form_errors(form) }}
 
