[Update]Agregando Notificación por SMS, cambiando el namespace al bundle de notificiaciones de Buseta a HatueySoft y realizando cambios generales al bundle de notificaciones

--- a/src/HatueySoft/NotificacionesBundle/Resources/views/Extras/header.html.twig
+++ b/src/HatueySoft/NotificacionesBundle/Resources/views/Extras/header.html.twig
@@ -6,12 +6,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="{{ path('core_homepage') }}">Sistema de Gestión Estación de Servicios - Módulo de Combustible</a>
+    <a class="navbar-brand" href="{{ path('core_homepage') }}">Sistema de Gestión Estación de Servicios - Notificaciones</a>
 </div>
 <!-- /.navbar-header -->
 
 <ul class="nav navbar-top-links navbar-right">
     {{ render(controller('HatueySoftNotificacionesBundle:Notificaciones:countNotificaciones')) }}
+
     <!-- /.dropdown -->
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
