--- a/src/Buseta/TemplateBundle/Resources/views/Macros/macros.html.twig
+++ b/src/Buseta/TemplateBundle/Resources/views/Macros/macros.html.twig
@@ -1,11 +1,12 @@
 {% trans_default_domain 'messages' %}
 
 {% macro documentState(state, translationDomain) %}
-    {% if state == 'COMPLETE' or state == 'CO'%}
+    {% if state == 'COMPLETE' or state == 'CO' or
+    state == 'CL' or state == 'WN'%}
         {% set badge = 'success' %}
-    {% elseif state == 'PROCESS' or state == 'PR' %}
+    {% elseif state == 'PROCESS' or state == 'PR' or state == 'AP'%}
         {% set badge = 'primary' %}
-    {% elseif state == 'POSTED' %}
+    {% elseif state == 'POSTED' or state == 'LS' or state == 'PA'%}
         {% set badge = 'warning' %}
     {% else %}
         {% set badge = 'danger' %}
