--- a/src/Buseta/TallerBundle/Resources/views/Diagnostico/index.html.twig
+++ b/src/Buseta/TallerBundle/Resources/views/Diagnostico/index.html.twig
@@ -34,6 +34,8 @@
             {{ form_widget(filter_form._token) }}
 
             <div class="filter-actions" style="margin-top: 8px;">
+                <input class="btn btn-success btn-small" style="position: absolute; left: -9999px; width: 1px; height: 1px;"
+                       tabindex="-1" type="submit" value="Filtrar" name="filtrar">
                 <a id="filter_form_submit_btn" class="btn btn-success btn-small">
                     <span class="glyphicon glyphicon-filter"></span> Filtrar
                 </a>
@@ -191,6 +193,12 @@
                     $(this).val(null);
                 })
             });
+
+            $('form#filter_form').find('select').on('keyup', function (event) {
+                if (event.keyCode == 13) {
+                    $('form#filter_form').submit();
+                }
+            })
         });
     </script>
 {% endblock javascripts %}
