--- a/src/Buseta/BodegaBundle/Resources/views/Albaran/index.html.twig
+++ b/src/Buseta/BodegaBundle/Resources/views/Albaran/index.html.twig
@@ -38,6 +38,8 @@
             {{ form_widget(filter_form._token) }}
 
             <div class="filter-actions" style="margin-top: 8px;">
+                <input class="btn btn-success btn-small" style="position: absolute; left: -9999px; width: 1px; height: 1px;"
+                       tabindex="-1" type="submit" value="Filtrar" name="filtrar">
                 <a id="filter_form_submit_btn" class="btn btn-success btn-small">
                     <span class="glyphicon glyphicon-filter"></span> Filtrar
                 </a>
@@ -178,11 +180,11 @@
                 })
             });
 
-            $('div#filter_form_component').find('input, select').on('keypress', function (e) {
-                if (e.keyCode === 10 || e.keyCode === 13) {
+            $('form#filter_form').find('select').on('keyup', function (event) {
+                if (event.keyCode == 13) {
                     $('form#filter_form').submit();
                 }
-            });
+            })
 
 
             //modificacion de los selectores de fecha
